@@ -1,9 +1,10 @@
 package br.com.heycheff.api.app.controller;
 
-import br.com.heycheff.api.app.dto.response.ReceiptFeed;
-import br.com.heycheff.api.app.dto.response.ReceiptModal;
 import br.com.heycheff.api.app.dto.StepDTO;
-import br.com.heycheff.api.app.dto.TagDTO;
+import br.com.heycheff.api.app.dto.response.PageResponse;
+import br.com.heycheff.api.app.dto.response.ReceiptFeed;
+import br.com.heycheff.api.app.dto.response.ReceiptId;
+import br.com.heycheff.api.app.dto.response.ReceiptModal;
 import br.com.heycheff.api.app.service.ReceiptService;
 import br.com.heycheff.api.util.exception.ReceiptNotFoundException;
 import org.junit.jupiter.api.Test;
@@ -16,10 +17,11 @@ import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.web.servlet.MockMvc;
 
+import java.util.Collections;
 import java.util.List;
 
 import static br.com.heycheff.api.app.service.ReceiptServiceTest.multipart;
-import static br.com.heycheff.api.app.service.ReceiptServiceTest.*;
+import static br.com.heycheff.api.app.service.ReceiptServiceTest.receipt;
 import static java.util.Collections.emptyList;
 import static org.hamcrest.Matchers.is;
 import static org.mockito.ArgumentMatchers.any;
@@ -45,15 +47,22 @@ class ReceiptControllerTest {
     @Test
     @WithMockUser("heycheff")
     void loadFeed() throws Exception {
-        when(service.loadFeed())
-                .thenReturn(List.of(new ReceiptFeed(ID, "thumb", "title")));
+        when(service.loadFeed(1, 1))
+                .thenReturn(new PageResponse<>(
+                        List.of(new ReceiptFeed(
+                                ID, "thumb", "title", Collections.emptyList(), 15)
+                        ), 1L)
+                );
 
         mvc.perform(get(URL)
+                        .queryParam("pageNum", String.valueOf(1))
+                        .queryParam("pageSize", String.valueOf(1))
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(content()
                         .contentTypeCompatibleWith(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$[0].titulo", is("title")));
+                .andExpect(jsonPath("$.items[0].titulo", is("title")))
+                .andExpect(jsonPath("$.count", is(1)));
     }
 
     @Test
@@ -66,14 +75,14 @@ class ReceiptControllerTest {
                 .andExpect(status().isOk())
                 .andExpect(content()
                         .contentTypeCompatibleWith(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.tags[0].id", is(1)))
                 .andExpect(jsonPath("$.steps[0].modoPreparo", is("prepare")));
     }
 
     private ReceiptModal modal() {
         var modal = new ReceiptModal();
-        modal.setTags(List.of(new TagDTO(1, "tag")));
-        modal.setSteps(List.of(new StepDTO("path", 1, emptyList(), "prepare")));
+        modal.setSteps(List.of(new StepDTO(
+                "path", 1, emptyList(), "prepare", 15
+        )));
         return modal;
     }
 
@@ -90,7 +99,7 @@ class ReceiptControllerTest {
     @Test
     @WithMockUser("heycheff")
     void includeReceipt() throws Exception {
-        when(service.save(any(), any())).thenReturn(receipt());
+        when(service.save(any(), any())).thenReturn(new ReceiptId(receipt().getSeqId()));
 
         var formData = """
                 titulo:Camarão do Baiano
@@ -104,7 +113,7 @@ class ReceiptControllerTest {
                 .andExpect(status().isCreated())
                 .andExpect(content()
                         .contentTypeCompatibleWith(MediaType.APPLICATION_JSON))
-                .andExpect(jsonPath("$.title", is(SCRAMBLED_EGGS)));
+                .andExpect(jsonPath("$.seqId", is(1)));
     }
 
     @Test
